chore: update workflow schedule for IST times (9 AM, 3 PM, 11 PM)

--- a/.github/workflows/auto-reply.yml
+++ b/.github/workflows/auto-reply.yml
@@ -2,8 +2,10 @@ name: YouTube Auto Reply Bot
 
 on:
   schedule:
-    - cron: "0 */8 * * *" # Runs every 8 hours
-  workflow_dispatch: # Allows manual trigger
+    - cron: '30 3 * * *'   # 09:00 IST
+    - cron: '30 9 * * *'   # 15:00 IST
+    - cron: '30 17 * * *'  # 23:00 IST
+  workflow_dispatch:
 
 jobs:
   reply-job:
