--- a/.github/workflows/auto-reply.yml
+++ b/.github/workflows/auto-reply.yml
@@ -1,12 +1,13 @@
 name: YouTube Auto Reply Bot
 
 on:
-  schedule:
-    - cron: '30 2 * * *'   # 08:00 IST
-    - cron: '30 6 * * *'   # 12:00 IST
-    - cron: '30 10 * * *'  # 16:00 IST
-    - cron: '30 14 * * *'  # 20:00 IST
-    - cron: '30 19 * * *'  # 01:00 IST
+  schedule: 
+    - cron: '0 * * * *'
+    # - cron: '30 2 * * *'   # 08:00 IST
+    # - cron: '30 6 * * *'   # 12:00 IST
+    # - cron: '30 10 * * *'  # 16:00 IST
+    # - cron: '30 14 * * *'  # 20:00 IST
+    # - cron: '30 19 * * *'  # 01:00 IST
   workflow_dispatch:
 
 jobs:
